# mcp-llama-swap

./: .gitignore  LICENSE  MANIFEST.in  README.md  ai.litellm.proxy.plist  ai.litellm.proxy.plist.template  config.example.json  config.example.linux.json  config.json  litellm_config.yaml  mcp_llama_swap.py  pyproject.toml  setup.sh  test_mcp_llama_swap.py
mcp_llama_swap/: __init__.py  config.py  launchctl.py  server.py  service.py  systemd.py
