[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-llama-swap"
version = "1.0.0"
description = "MCP server for hot-swapping llama.cpp models in Claude Code sessions"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Contributors"}
]
keywords = [
    "mcp",
    "llama-cpp",
    "claude-code",
    "model-context-protocol",
    "launchctl",
    "systemd",
    "apple-silicon",
    "local-llm",
    "model-switching",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/oussama-kh/mcp-llama-swap"
Repository = "https://github.com/oussama-kh/mcp-llama-swap"
Issues = "https://github.com/oussama-kh/mcp-llama-swap/issues"

[project.scripts]
mcp-llama-swap = "mcp_llama_swap:main"

[tool.setuptools]
packages = ["mcp_llama_swap"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
